# ai-system-arch

./: .env.dev.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.multi-region.yml  docker-compose.override.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: _stats.py  bench_identity.py  e2e_load.py
docs/: 00-decisions.md  01-architecture.md  (+19 more)
services/libs/apihub-core/: README.md  pyproject.toml
services/libs/apihub-core/src/apihub_core/: __init__.py  apisix_client.py  auth.py  clickhouse.py  config.py  crypto.py  db.py  errors.py  events.py  identity.py  jwt_utils.py  kafka.py  l1.py  logging.py  middleware.py  oss.py  pii.py  redis.py  signing.py  tenant.py  tracing.py
services/libs/apihub-core/tests/: conftest.py  test_apisix_client.py  test_auth.py  test_ch_tenant_guard.py  test_config.py  test_config_security.py  test_crypto.py  test_db_retry.py  test_db_rls.py  test_errors.py  test_events.py  test_hmac_verify.py  test_identity.py  test_identity_hmac.py  test_identity_l1.py  test_jwt_utils.py  test_kafka.py  test_l1.py  test_multi_region_ch.py  test_pii.py  test_redis.py  test_signing.py  test_tenant.py
services/services/admin/: Dockerfile  README.md  pyproject.toml
services/services/admin/src/admin/: __init__.py  aggregator.py  audit.py  main.py  models.py  repository.py  routes.py
services/services/admin/tests/: conftest.py  test_archive.py  test_audit.py  test_cleanup.py  test_repository.py  test_routes.py
services/services/ai-gateway/: Dockerfile  pyproject.toml
services/services/ai-gateway/src/ai_gateway/: crypto.py  main.py  models.py  repository.py  routes.py
services/services/ai-gateway/src/ai_gateway/providers/: __init__.py  anthropic.py  openai_compat.py
services/services/ai-gateway/tests/: conftest.py  test_providers.py  test_routes.py
services/services/api-registry/: Dockerfile  README.md  pyproject.toml
services/services/api-registry/src/api_registry/: __init__.py  apisix_client.py  change_request.py  main.py  models.py  routes.py
services/services/api-registry/tests/: conftest.py  test_api_update_delete.py  test_apisix_client.py  test_change_request.py  test_lifecycle.py
services/services/auth/: Dockerfile  README.md  pyproject.toml
services/services/auth/src/auth/: __init__.py  apikey.py  cache.py  dingtalk.py  identity.py  main.py  models.py  repository.py  routes.py
services/services/auth/tests/: conftest.py  test_apikey.py  test_cache.py  test_create_key_label.py  test_hmac_repo.py  test_hmac_routes.py  test_identity.py  test_key_lifecycle_apisix.py  test_routes.py  test_sso.py  test_upsert_consumer_labels.py
services/services/dispatcher/: Dockerfile  README.md  pyproject.toml
services/services/dispatcher/src/dispatcher/: __init__.py  event.py  forwarder.py  main.py  masking.py  models.py  resolver.py  routes.py  task_dispatcher.py  visibility.py
services/services/dispatcher/tests/: conftest.py  test_event.py  test_forwarder.py  test_jobs.py  test_masking.py  test_resolver.py  test_resolver_lifecycle.py  test_visibility.py
services/services/docs/: Dockerfile  README.md  pyproject.toml
services/services/docs/src/docs/: __init__.py  examples.py  main.py  models.py  openapi_gen.py  repository.py  routes.py
services/services/docs/tests/: conftest.py  test_examples.py  test_openapi_gen.py  test_routes.py
services/services/executor/: Dockerfile  README.md  pyproject.toml
services/services/executor/src/executor/: __init__.py  consumer.py  main.py  models.py  processor.py  repository.py
services/services/executor/tests/: conftest.py  test_consumer.py  test_processor.py  test_repository.py
services/services/notification/: Dockerfile  pyproject.toml
services/services/notification/src/notification/: consumer.py  main.py  models.py  renderer.py  repository.py  routes.py
services/services/notification/src/notification/channels/: __init__.py  base.py  dingtalk.py  email.py  registry.py
services/services/notification/tests/: conftest.py  test_channels.py  test_consumer.py  test_outbound_signing.py  test_renderer.py  test_routes.py
services/services/portal/: Dockerfile  pyproject.toml
services/services/portal/src/portal/: main.py  models.py  repository.py  routes.py
services/services/portal/tests/: conftest.py  test_routes.py
services/services/quota/: Dockerfile  README.md  pyproject.toml
services/services/quota/src/quota/: __init__.py  limiter.py  lua_scripts.py  main.py  models.py  repository.py  routes.py
services/services/quota/tests/: conftest.py  test_limiter.py  test_routes.py  test_rules.py
services/services/retry/: Dockerfile  README.md  pyproject.toml
services/services/retry/src/retry_svc/: __init__.py  backoff.py  consumer.py  delay_queue.py  main.py  models.py  repository.py  routes.py  worker.py
services/services/retry/tests/: conftest.py  test_backoff.py  test_consumer.py  test_delay_queue.py  test_repository.py  test_routes.py  test_worker.py
services/services/tenant/: Dockerfile  README.md  pyproject.toml
services/services/tenant/src/tenant/: __init__.py  cache.py  main.py  models.py  repository.py  routes.py
services/services/tenant/tests/: conftest.py  test_cache.py  test_repository.py  test_routes.py
services/services/trace/: Dockerfile  README.md  pyproject.toml
services/services/trace/src/trace_svc/: __init__.py  main.py  models.py  repository.py  routes.py
services/services/trace/tests/: conftest.py  test_repository.py  test_routes.py
services/services/workflow/: Dockerfile  README.md  pyproject.toml
services/services/workflow/src/workflow_svc/: __init__.py  argo_client.py  main.py  models.py  repository.py  routes.py
services/services/workflow/tests/: conftest.py  test_argo_client.py  test_argo_mapping.py  test_k8s_argo_client.py  test_routes.py
tools/apihub-cli/: README.md  pyproject.toml
tools/apihub-cli/src/apihub_cli/: __init__.py  __main__.py  apply.py  client.py  main.py  models.py
tools/apihub-cli/tests/: conftest.py  test_apply.py  test_main.py  test_models.py
(+362 files in other folders)
