[project]
name = "apihub-core"
version = "0.1.0"
description = "APIHub 共享基础库：租户上下文、RLS DB、Redis、Kafka、structlog、OTel、鉴权、统一错误"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "asyncpg>=0.29",
  "redis>=5.0,<6.0",
  "aiokafka>=0.10",
  "httpx>=0.27",
  "clickhouse-connect>=0.7",
  "structlog>=24.1",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "opentelemetry-instrumentation-asyncpg>=0.45b0",
  "opentelemetry-instrumentation-redis>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "tenacity>=8.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "fakeredis>=2.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --showlocals"
markers = [
  "integration: requires live infra (PG/Redis/Kafka), skip with -m 'not integration'",
]
