[project]
name = "apihub-core"
version = "0.1.0"
description = "APIHub 共享基础库：租户上下文、RLS DB、Redis、Kafka、structlog、OTel、鉴权、统一错误"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "asyncpg==0.30.0",
  "redis>=5.0,<9.0",
  "aiokafka==0.12.0",
  # cramjam：aiokafka 0.12 解析 lz4 codec 的底层库（kafka.py compression_type="lz4"）。
  # 不声明会导致任何初始化 Kafka producer 的服务启动崩溃。codec lib，不属 4 个关键 pin 家族，用 floor。
  "cramjam>=2.7",
  "httpx>=0.27",
  "clickhouse-connect==0.7.7",
  "structlog>=24.1",
  # JWT：外部开发者「人」的登录态签发/验签（HS256）。与机器 API Key 分流。
  "PyJWT>=2.8,<3",
  "opentelemetry-api==1.40.0",
  "opentelemetry-sdk==1.40.0",
  "opentelemetry-instrumentation-fastapi==0.61b0",
  "opentelemetry-instrumentation-httpx==0.61b0",
  "opentelemetry-instrumentation-asyncpg==0.61b0",
  "opentelemetry-instrumentation-redis==0.61b0",
  "opentelemetry-exporter-otlp==1.40.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "tenacity>=8.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "fakeredis>=2.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --showlocals"
markers = [
  "integration: requires live infra (PG/Redis/Kafka), skip with -m 'not integration'",
]
