[project]
name = "admin"
version = "0.1.0"
description = "APIHub Admin BFF + 审计 —— 后台聚合 API / 自动审计 / 等保三级"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
