[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI 网关 —— LLM 推理路由、多 Provider 接入、Token 计费"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "cryptography>=42.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
