[project]
name = "api-registry"
version = "0.1.0"
description = "API 元数据管理 —— 接口 CRUD、版本、生命周期"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
