[project]
name = "auth"
version = "0.1.0"
description = "APIHub 鉴权服务 —— APIKey 生成 / 校验 / 吊销 + Redis 热点缓存"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
