[project]
name = "dispatcher"
version = "0.1.0"
description = "APIHub 同步调用转发 + 异步任务派发 + AI 流式代理"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "httpx[http2]>=0.27",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
