[project]
name = "docs"
version = "0.1.0"
description = "APIHub Docs —— OpenAPI spec 生成 + 多语言调用示例"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
