[project]
name = "portal"
version = "0.1.0"
description = "APIHub Portal BFF —— 外部开发者门户聚合层（身份转发 + app/key 自助直写）"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
