[project]
name = "trace"
version = "0.1.0"
description = "APIHub Trace —— 调用日志查询 + 聚合分析（ClickHouse）"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
