[project]
name = "workflow-svc"
version = "0.1.0"
description = "APIHub 工作流服务 —— 封装 Argo Workflow，长时 DAG 任务调度"
requires-python = ">=3.11"
dependencies = [
  "apihub-core",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
